[RM-32] fix: displaying menu on mobile devices

--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -23,19 +23,18 @@ nav {
 /***   MAIN CONTENT   ***/
 
 main {
-    width: calc(100% - 300px);
-    position: absolute;
+    width: calc(100vw - 300px);
+    position: fixed;
     top: 70px;
     left: 300px;
     height: calc(100vh - 70px);
     background-color: #f2f2f2;
-    transition: 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 
 main.full-width {
-    width: 100%;
+    width: 100vw;
     left: 0;
-    transform: translate(0, 0);
     transition: all 0.3s ease-in-out;
 }
 
@@ -62,14 +61,9 @@ main.full-width {
     list-style: none;
     width: 77px;
     height: 70px;
-    display: list-item;
     cursor: pointer;
     display: flex;
     align-items: center;
-}
-
-.user-status {
-    cursor: pointer;
 }
 
 .user-status img {
@@ -109,12 +103,13 @@ main.full-width {
     cursor: pointer;
     border: none;
     background-color: white;
+    visibility: hidden;
 }
 
 .menu.hide {
     width: 0px;
     overflow: auto;
-    transform: translate(-180px, 0);
+    transform: translate3d(-300px, 0px, 0px);
     transition: all 0.3s ease-in-out;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25), 0 0 50px rgba(0, 0, 0, 0.1);
 }
@@ -122,7 +117,7 @@ main.full-width {
 .menu {
     height: 100vh;
     width: 300px;
-    transition: 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 
 .menu-items {
@@ -260,6 +255,10 @@ hr {
         left: 0;
     }
 
+    .close-btn {
+        visibility: visible;
+    }
+
     .close-icon {
         background-image: url("../../images/close.svg");
         background-repeat: no-repeat;
@@ -267,7 +266,11 @@ hr {
     }
 
     main {
-        width: 0;
+        visibility: hidden;
+    }
+
+    main.full-width {
+        visibility: visible;
     }
 }
 
